css/home.css
@import url(./main.css);

.headline {
  background-image: url(../assets/home.jpg);
  background-size: cover;
  background-position-x: 100%;
  padding-top: 25%;
  opacity: 0.8;
}

.homeText {
  font-weight: 700;
  font-size: 40px;
  color: #ff0009;
  letter-spacing: 0.3rem;
  padding: 5px;
}

.home {
  font-weight: 500;
  font-size: 25px;
  color: #ff0009;
  letter-spacing: 0.3rem;
  padding: 5px;
}

.someText {
  color: #272a31;
  font-size: 20px;
  line-height: 25px;
  padding: 28px;
  border: 4px solid #f4f4f4;
  margin-bottom: 25px;
}

.date {
  color: #272a31;
  font-size: 25px;
  font-weight: 500;
  padding-bottom: 10px;
}

.venue {
  color: #272a31;
  font-size: 20px;
  line-height: 25px;
  font-weight: 500;
}

.prog {
  background-color: #272a31;
  display: flex;
  flex-direction: column;
  align-items: center;
}

.prog h2 {
  color: #fff;
  font-size: 28px;
  font-weight: 600;
  margin: 30px 0 15px;
}

.prog .prog-line {
  border: 1px solid #ec5242;
  width: 50px;
  margin-bottom: 40px;
}

.prog .row-container {
  list-style: none;
}

.prog .row-container li {
  display: flex;
  align-items: center;
  justify-content: space-between;
  width: 100%;
  background-color: rgba(255, 255, 255, 0.1);
  padding: 20px 5px;
  margin-bottom: 10px;
}

.row-container img {
  width: 28%;
  padding-right: 5px;
}

.speaker-info h3 {
  font-size: 25px;
}

.row-container li h3 {
  color: #ec5242;
  font-size: 20px;
  padding-right: 29px;
}

.row-container p {
  width: 60%;
  color: #fff;
  font-size: 16px;
  padding-left: 30px;
}

.prog .join-program {
  background-color: #ec5242;
  color: #fff;
  padding: 35px 55px;
  margin: 40px 0;
  font-size: 20px;
  border: 0;
  cursor: pointer;
}

.prog button:hover {
  color: #ec5242;
  background-color: #f4f4f4;
}

/* ======== Dynamic Section ======= */

.talks {
  padding: 20px;
  margin-bottom: 40px;
}

.subheading {
  font-weight: 700;
  font-size: 25px;
  width: fit-content;
  margin: 30px auto 15px auto;
}

.talks .prog-line {
  width: 50px;
  margin: auto;
  margin-bottom: 40px;
  border: 1px solid #ec5242;
}

.grid-container .speaker {
  display: flex;
  align-items: center;
  justify-content: center;
  width: 100%;
  height: 76%;
  margin-bottom: 50px;
  overflow-y: hidden;
}

.footer img {
  width: 50%;
  padding: 0 5%;
}

.pic-container {
  width: 80%;
  max-width: 150px;
  margin-right: 20px;
  height: 150px;
  position: relative;
  overflow-y: hidden;
}

.pic-container .image-container {
  width: 90%;
  height: 90%;
  position: relative;
  top: 20px;
  left: 20px;
}

.pic-container .image-container img {
  width: 100%;
  height: 100%;
  object-fit: cover;
  object-position: center;
  position: absolute;
}

.talks .square {
  position: absolute;
  top: 0;
  left: 0;
  display: block;
  background-color: #272a31;
  width: 70px;
  height: 70px;
  z-index: -1;
}

.speaker-info {
  max-width: 50%;
}

.speaker-info h4 {
  font-weight: 400;
  font-size: 17px;
  color: #ec5242;
  font-style: italic;
  margin: 10px 0;
}

.speaker-info .line-dark {
  width: 30px;
  margin: 10px 0 10px 0;
  border: 1px solid #d3d3d3;
}

.speaker-info p {
  color: #272a31;
  font-size: 16px;
  line-height: 20px;
  padding: 5px 0;
}

.talks .more {
  display: none;
}

#partners {
  display: none;
}

.footer {
  display: flex;
  align-items: center;
  padding: 1rem 5%;
  background: #fff;
}

.footer-title {
  color: #272a31;
  font-size: 14px;
  font-weight: 700;
  padding: 5px 0;
  text-align: left;
}

.footer #rights {
  display: none;
}

.home-header {
  display: none;
}

.h-text {
  display: none;
}

.see-more {
  display: none;
}

@media only screen and (min-width: 768px) {
  .homeText {
    display: none;
  }

  .someText {
    display: none;
  }

  section {
    padding: 3rem 10%;
  }

  .home-header {
    display: block;
    font-weight: 900;
    font-size: 50px;
    color: #ff0009;
    letter-spacing: 0.3rem;
    padding: 5px;
    text-transform: uppercase;
    text-align: left;
    width: 60%;
  }

  .h-text {
    display: block;
    color: #272a31;
    font-size: 20px;
    line-height: 25px;
    font-weight: 600;
    padding: 25px;
    border: 3px solid #f4f4f4;
    margin-bottom: 25px;
    width: 82%;
  }

  .home {
    text-align: left;
    font-weight: 500;
    font-size: 25px;
    color: #ff0009;
    letter-spacing: 0.3rem;
    padding: 2px;
  }

  .date {
    text-align: left;
    color: #272a31;
    font-size: 30px;
    font-weight: 600;
    padding-bottom: 10px;
  }

  .venue {
    text-align: left;
    color: #272a31;
    font-size: 20px;
    line-height: 25px;
    font-weight: 500;
  }

  .prog {
    background-color: #272a31;
    align-items: center;
  }

  .row-container {
    display: flex;
    gap: 5px;
  }

  .prog .row-container li {
    display: flex;
    align-items: center;
    flex-direction: column;
    width: 25%;
    background-color: rgba(255, 255, 255, 0.1);
    padding: 20px 5px;
    margin-bottom: 10px;
  }

  .row-container li:hover {
    border: 2px solid #f4f4f4;
    width: 25%;
    transition: ease-in-out;
    cursor: pointer;
  }

  .prog h2 {
    color: #fff;
    font-size: 30px;
    font-weight: 600;
    margin: 30px 0 15px;
    text-align: center;
  }

  .row-container img {
    width: 28%;
    padding-right: 5px;
  }

  .row-container li h3 {
    color: #ec5242;
    font-size: 20px;
    padding: 8px 0;
  }

  .row-container p {
    width: 100%;
    color: #fff;
    font-size: 14px;
    padding: 0;
    text-align: center;
  }

  .join-program {
    display: none;
  }

  .see-more {
    display: block;
    text-transform: uppercase;
    text-decoration: underline;
    color: #d3d3d3;
    font-size: 16px;
    margin: 35px auto;
  }

  .see-more:hover {
    color: #ec5242;
    cursor: pointer;
  }

  .see-more:focus {
    color: #ec5242;
  }

  /* speaker section here */

  .talks {
    padding: 20px;
    margin-bottom: 40px;
  }

  .subheading {
    font-weight: 700;
    font-size: 25px;
    width: fit-content;
    margin: 30px auto 15px auto;
  }

  .grid-container {
    display: grid;
    grid-template-columns: 50% 50%;
    grid-template-rows: 33.33% 33.33% 33.33%;
    padding: 5px 10%;
  }

  .grid-container .speaker {
    display: flex;
    align-items: center;
    justify-content: center;
    width: 100%;
    height: 80%;
    margin-bottom: 50px;
  }

  .talks .more {
    display: none;
  }

  #partners {
    display: block;
    background-color: #272a31da;
  }

  .partner h2 {
    color: #272a31;
    text-align: center;
    font-size: 30px;
    font-weight: 600;
    margin: -10px 0 20px;
  }

  .partner .line {
    border: 1px solid #ec5242;
    width: 40px;
    margin: 20px auto;
  }

  .first-row {
    display: flex;
    gap: 30px;
    align-items: center;
    justify-content: center;
    margin: 5px auto;
    padding-left: 10%;
  }

  .footer {
    display: flex;
    align-items: center;
    justify-content: center;
    margin: 3px auto;
    padding: 1rem 20%;
    background: #fff;
  }

  .footer img {
    width: 60%;
    padding: 0 5%;
  }

  .footer-title {
    display: block;
    color: #272a31da;
    font-size: 16px;
    font-weight: 500;
    padding: 5px 2px;
    text-align: left;
    margin: 0 auto;
  }

  .footer #rights {
    display: block;
    color: #272a31da;
    font-size: 16px;
    font-weight: 500;
    padding: 2px;
    text-align: left;
    margin: 5px auto;
  }
}

